Forward port r315 from branches/5.0:

Fix a bug #18077 InnoDB uses full explicit table locks in
stored FUNCTION.